added another example on standard paths

--- a/report.tex
+++ b/report.tex
@@ -1867,7 +1867,16 @@ for $i\in\modn$ and $s\geq 1$, respectively.
 \end{definition}
 
 \begin{example}
+\begin{enumerate}[(i)]
+\item
 The path $k_{2103}e_2e_1^2e_3e_2^2e_3f_3^3f_2^3f_1^2$ from the previous example is the standard path for the matrix $\elem{1}{3}+\elem{1}{4}+\elem{2}{4}+\elem{4}{2}+2\elem{4}{1}$.
+
+\item
+The standard path for the matrix $A=\elem{1}{2}+\elem{1}{3}+\elem{1}{4}\in\matrices{(4,3)}$ is $p_A = 1_{3000}e_1^3e_2^2e_3$.
+
+\item
+The standard path for the matrix $B=2\elem{1}{5}\in\matrices{(3,2)}$ is $p_B = 1_{200}e_1^2e_2^2e_3^2e_1^2$.
+\end{enumerate}
 \end{example}
 
 \begin{lemma}\label{lemma:correspondence-std-paths-to-basis}
