See previous commit message - forgot to add changes to commit.

--- a/preamble.sty
+++ b/preamble.sty
@@ -161,7 +161,7 @@
 % transpose symbol
 \newcommand{\transpose}{\top}
 % transpose involution on the generic algebra
-\newcommand{\antipode}[1]{S{(#1)}}
+\newcommand{\antipode}[1]{\mathfrak{S}{(#1)}}
 % cyclic translation on generic algebra
 \newcommand{\rotation}[1]{\tau{(#1)}}
 
